@@ -1,5 +1,8 @@
 2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>
 
+	* Sybase.py: Factored out Cursor._checkready() - patch provided by
+	Greg Ward
+
 	* Sybase.py: Corrected tests test_description and test_rowcount -
 	"This routine cannot be called because another command structure
 	has results pending." when manually commiting after a select
